--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Polyuih | Professional Roblox Animator for Hire | Custom Animations</title>
+  <title>Polyuih | Roblox Animator for Hire</title>
   <meta name="description" content="Hire a professional Roblox animator! Specializing in R6, R15 animations, and game development. High-quality animations at competitive prices.">
   <meta name="keywords" content="roblox animator for hire, roblox animations, roblox animation services, r6 animations, r15 animations, moon animator, blender animations">
   <meta name="author" content="Polyuih">
   <meta property="og:title" content="Polyuih | Professional Roblox Animator for Hire">
   <meta property="og:description" content="Hire a professional Roblox animator specializing in R6, R15 animations and game development.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://yourportfoliourl.com">
-  <link rel="canonical" href="https://yourportfoliourl.com">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <meta property="og:url" content="https://polyuih.com">
+  <link rel="canonical" href="https://polyuih.com">
+  <link rel="icon" href="public/favicon.ico" type="">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Patrick+Hand&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
