--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <div class="portfolio-grid">
         <div class="project-card sketch-border">
           <h3>Roblox Animation Pack</h3>
-          <img src="https://placehold.co/600x400?text=Animation+Preview" alt="Roblox R6 Animation Examples">
+          <img src="Public/Roblox.svg" alt="Roblox R6 Animation Examples">
           <p>A collection of professional animations for Roblox avatars, used by over 10,000 players.</p>
         </div>
         <div class="project-card sketch-border">
