--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://polyuih.com">
   <link rel="canonical" href="https://polyuih.com">
-  <link rel="icon" href="public/favicon.ico" type="">
+  <link rel="icon" href="Public/favicon.ico" type="">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Patrick+Hand&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
@@ -22,7 +22,7 @@
       "@type": "Person",
       "name": "Polyuih",
       "jobTitle": "Professional Roblox Animator & Developer",
-      "url": "https://yourportfoliourl.com",
+      "url": "https://polyuih.com",
       "sameAs": [
         "https://www.roblox.com/users/1405232056",
         "https://discord.com/users/1250899463942438954"
@@ -183,18 +183,18 @@
         </div>
         <div class="project-card sketch-border">
           <h3>Interactive Discord Bot</h3>
-          <img src="https://placehold.co/600x400?text=Bot+Interface" alt="Discord Bot for Animation Services">
+          <img src="Public/Discord.svg" alt="Discord Bot for Animation Services">
           <p>Custom moderation and entertainment bot with 50+ commands and role management.</p>
         </div>
         <div class="project-card sketch-border">
           <h3>2D Animated Short</h3>
-          <img src="https://placehold.co/600x400?text=2D+Animation" alt="2D Animation Services">
+          <img src="Public/Polyuih-Avatar.svg" alt="2D Animation Services">
           <p>Frame-by-frame animated short film created for a client commission.</p>
         </div>
         <div class="project-card sketch-border">
           <h3>Blender Plugin</h3>
-          <img src="https://placehold.co/600x400?text=Plugin+UI" alt="Blender Animation Tools">
-          <p>Custom toolset for streamlining animation workflow in Blender.</p>
+          <img src="Public/Blender.svg" alt="Roblox Studio to Blender Plugin">
+          <p>Custom Roblox Studio and Blender Plugin for Converting Animations.</p>
         </div>
       </div>
     </section>
