--- a/index.html
+++ b/index.html
@@ -179,16 +179,16 @@
         <div class="project-card sketch-border">
           <h3>Roblox Animation Pack</h3>
           <img src="Public/Roblox.svg" alt="Roblox R6 Animation Examples">
-          <p>A collection of professional animations for Roblox avatars, used by over 10,000 players.</p>
+          <p>A collection of professional animations for Roblox avatars.</p>
         </div>
         <div class="project-card sketch-border">
           <h3>Interactive Discord Bot</h3>
           <img src="Public/Discord.svg" alt="Discord Bot for Animation Services">
-          <p>Custom moderation and entertainment bot with 50+ commands and role management.</p>
+          <p>Custom Open Source moderation and entertainment bot with 25+ commands and role management.</p>
         </div>
         <div class="project-card sketch-border">
           <h3>2D Animated Short</h3>
-          <img src="Public/Polyuih-Avatar.svg" alt="2D Animation Services">
+          <img src="Public/Polyuih_Avatar.svg" alt="2D Animation Services">
           <p>Frame-by-frame animated short film created for a client commission.</p>
         </div>
         <div class="project-card sketch-border">
