--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <h3>Roblox R15 Animations</h3>
           <ul class="price-list">
             <li><span class="price">1250 Robux</span> per Animation</li>
-            <li><span class="price">1250 - 10000 Robux</span> per Cutscene Animation</li>
+            <li><span class="price">1250 - 10k Robux</span> per Cutscene Animation</li>
           </ul>
         </div>
 
