--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <div class="hand-drawn-sign sketch-border">
         <h1>Welcome</h1>
         <p>Scroll to explore</p>
+        <p>Made custom by Polyuih (WIP)</p>
       </div>
       <div class="scroll-arrow">↓</div>
     </div>
@@ -79,7 +80,7 @@
           <h1 style="font-size: 2.8rem;">Hello, I'm Polyuih!</h1>
           <p class="pronunciation">(Pronounced: paul - ee - you)</p>
           <p class="tagline">Professional Animator</p>
-          <p>Specializing in R6 & R15 Roblox animations, Custom Rig Animations,and 2D Animations for over 3 years. Open to comissions to bring your game to life!</p>
+          <p>Specializing in R6 & R15 Roblox animations, Custom Rig Animations, and 2D Animations for over 3 years. Open to comissions to bring your game to life!</p>
         </div>
       </div>
     </section>
@@ -94,7 +95,7 @@
     </section>
 
     <section id="skills">
-      <h2>My Animation & Development Skills</h2>
+      <h2>My Animation & Software Skills</h2>
       <div class="skills-grid">
         <div class="skill-card sketch-border">
           <img src="Public/Roblox_Studio.svg" alt="Roblox Animation Services">
@@ -111,8 +112,15 @@
         </div>
         
         <div class="skill-card sketch-border">
-          <img src="Public/Discord.svg" alt="Discord Bot Development">
-          <h3>2D Animations in Adobe Animate</h3>
+          <img src="Public/After_effects.svg" alt="Discord Bot Development">
+          <h3>2D Animations in Adobe After Effects</h3>
+          <h4></h4>
+          <p>Only really getting into 2D Animations, loads of work yet to be put in!</p>
+        </div>
+
+        <div class="skill-card sketch-border">
+          <img src="Public/Premier_pro.svg" alt="Discord Bot Development">
+          <h3>Editing in Premier Pro For Cutscenes & Roblox Movies</h3>
           <h4></h4>
           <p>Only really getting into 2D Animations, loads of work yet to be put in!</p>
         </div>
@@ -120,8 +128,8 @@
         <div class="skill-card sketch-border">
           <img src="Public/Blender.svg" alt="Blender for Roblox Animations">
           <h3>Blender</h3>
-          <h4>3D Modeling, Custom Rig 3D Animations, Cutscenes</h4>
-          <p>Designs game-ready assets and animation props as well as custom 3D Animations</p>
+          <h4>3D Modeling, Custom Rig Animations, Cutscenes</h4>
+          <p>Designs game-ready assets and animation props as well as custom 3D Animations, focusing on Blender to improve my workflow!</p>
         </div>
     </section>
 
@@ -131,8 +139,8 @@
       <div class="sketch-border" style="padding: 2rem; background: var(--paper);">
         <div class="free-item">
           <h3>R6 Animation Pack</h3>
-          <p>Get 20+ free R6 animations including walks, runs, jumps, and idles - perfect for your Roblox game!</p>
-          <a href="#" class="download-button">Download Pack</a>
+          <p>Get 20+ free R6 animations including walks, runs, jumps, and idles all made custom by me, perfect for your Roblox game!</p>
+          <a href="Public/R6_Animation_Pack.RBXM" class="download-button">Download Pack</a>
         </div>
     </section>
 
@@ -140,13 +148,13 @@
       <h2>My Roblox Animation Portfolio</h2>
       <div class="portfolio-grid">
         <div class="project-card sketch-border">
-          <h3>Cutscene Animation Comission made in Blender!</h3>
-          <vid mp4="Public/Roblox.svg" alt="Roblox R6 Animation Examples">
-          <p>A collection of professional animations for Roblox avatars.</p>
+          <h3>"Royal Marines" (21K+ Members, 390k+ Visits)</h3>
+          <vid mp4="Public/Royal Marines.svg" alt="Roblox R6 Animation Examples">
+          <p>Made a custom Helicopter Opening cutscene, and a custom waking up animation. Special thanks to @alwaysgoofy and @alwayshydra who were the best to work with!</p>
         </div>
         <div class="project-card sketch-border">
           <h3>Custom 2D Animated Logo!</h3>
-          <img src="Public/Discord.svg" alt="Discord Bot for Animation Services">
+          <img src="Public/Adobe_after.svg" alt="Discord Bot for Animation Services">
           <p>Frame-by-frame animated logo created for a client commission.</p>
         </div>
         <div class="project-card sketch-border">
@@ -172,17 +180,17 @@
         <div class="pricing-category">
           <h3>Roblox R6 Animations</h3>
           <ul class="price-list">
-            <li><span class="price">500 Robux</span> per Animation (emotes)</li>
-            <li><span class="price">2500 Robux</span> for Weapon/Gun Animations</li>
-            <li><span class="price">1000 - 5000 Robux</span> per Cutscene Animation</li>
+            <li><span class="price">500 Robux</span> per Animation (Mainly Emotes)</li>
+            <li><span class="price">1000 Robux</span> for Weapon/Gun Animations</li>
+            <li><span class="price">2000 - 5000 Robux</span> per Cutscene Animation</li>
           </ul>
         </div>
 
         <div class="pricing-category">
           <h3>Roblox R15 Animations</h3>
           <ul class="price-list">
-            <li><span class="price">1250 Robux</span> per Animation</li>
-            <li><span class="price">1250 - 10k Robux</span> per Cutscene Animation</li>
+            <li><span class="price">1000 Robux</span> per Animation</li>
+            <li><span class="price">3000 - 10k Robux</span> per Cutscene Animation</li>
           </ul>
         </div>
     </section>
@@ -205,7 +213,7 @@
   <footer class="sketch-border">
     <p>© 2025 Polyuih | Professional Animator for Hire</p>
     <p>Website made entirely by me in with the help of some open source tools c:</p>
-    <p>All assets hand-drawn by me :p</p>
+    <p>All assets, including UI hand-drawn by me :p</p>
   </footer>
 
   <script src="script.js"></script>
