--- a/index.html
+++ b/index.html
@@ -112,24 +112,24 @@
         </div>
         
         <div class="skill-card sketch-border">
-          <img src="Public/After_effects.svg" alt="Discord Bot Development">
-          <h3>2D Animations in Adobe After Effects</h3>
+          <img src="Public/after_effects.svg" alt="Discord Bot Development">
+          <h3>Adobe After Effects</h3>
           <h4></h4>
           <p>Only really getting into 2D Animations, loads of work yet to be put in!</p>
         </div>
 
         <div class="skill-card sketch-border">
-          <img src="Public/Premier_pro.svg" alt="Discord Bot Development">
-          <h3>Editing in Premier Pro For Cutscenes & Roblox Movies</h3>
+          <img src="Public/premier_pro.svg" alt="Discord Bot Development">
+          <h3>Adobe Premier Pro</h3>
           <h4></h4>
-          <p>Only really getting into 2D Animations, loads of work yet to be put in!</p>
+          <p>Editing cutscenes, lighting, Roblox Movies!</p>
         </div>
         
         <div class="skill-card sketch-border">
           <img src="Public/Blender.svg" alt="Blender for Roblox Animations">
           <h3>Blender</h3>
           <h4>3D Modeling, Custom Rig Animations, Cutscenes</h4>
-          <p>Designs game-ready assets and animation props as well as custom 3D Animations, focusing on Blender to improve my workflow!</p>
+          <p>Designs game-ready assets and animation props as well as custom 3D Animations, focusing on Blender now for Roblox Rigs to improve my workflow!</p>
         </div>
     </section>
 
