--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div class="project-card sketch-border">
           <h3>"Royal Marines" (21K+ Members, 390k+ Visits)</h3>
           <vid mp4="Public/Royal Marines.svg" alt="Roblox R6 Animation Examples">
-          <p>Made a custom Helicopter Opening cutscene, and a custom waking up animation. Special thanks to @alwaysgoofy and @alwayshydra who were the best to work with!</p>
+          <p>Worked as a Royal Engineer, and later a Senior Contributer. Animated a custom Helicopter cutscene for their event "OPERATION: DEADZONE". Special thanks to @alwaysgoofy and @alwayshydra who were a great help working with!</p>
         </div>
         <div class="project-card sketch-border">
           <h3>Custom 2D Animated Logo!</h3>
