--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="hero-content">
         <div class="sketch-border" style="padding: 2rem; max-width: 900px; margin: 0 auto;">
           <h1 style="font-size: 2.8rem;">Hello, I'm Polyuih!</h1>
-          <p class="pronunciation">(Pronounced: paul - ee - you)</p>
+          <p class="pronunciation">(Pronounced: pawl - ee - you)</p>
           <p class="tagline">Professional Animator</p>
           <p>Specializing in R6 & R15 Roblox animations, Custom Rig Animations, and 2D Animations for over 3 years. Open to comissions to bring your game to life!</p>
         </div>
@@ -90,7 +90,7 @@
       <div class="sketch-border about-content" style="padding: 2rem; background: var(--paper);">
         <p class="about-text">I'm a professional Animator specializing in creating fluid, high-quality animations for R6 and R15 characters. My journey began during lockdown when I discovered my passion for animation, and it's been an exciting ride ever since!</p>
         <p class="about-text">Based in the United Kingdom (GMT+1).</p>
-        <p class="about-text">I believe in creating animations that are not just functional, but bring real personality and life to your Roblox characters and games.</p>
+        <p class="about-text">I believe in creating animations that bring real personality and life to your Roblox characters and games!</p>
       </div>
     </section>
 
