--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Polyuih | Medieval Animator</title>
-  <meta name="description" content="Professional Roblox animator specializing in medieval-themed animations">
+  <title>Polyuih | Animator</title>
+  <meta name="description" content="Roblox animator and artist!">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=MedievalSharp&family=Press+Start+2P&display=swap">
   <link rel="stylesheet" href="styles.css">
 </head>
